Fix package name, add Date

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cash For Bacon",
+  "name": "Cash-For-Bacon",
   "version": "0.1.0",
   "description": "PSD to HTML/CSS for Highforge",
   "author": "Jordan Pakrosnis",
